fix: render section background behind section content

--- a/next-app/app/cv/cv.module.scss
+++ b/next-app/app/cv/cv.module.scss
@@ -16,7 +16,7 @@
 .withBackground {
   position: relative;
 
-  & > :global(.container) {
+  &> :global(.container) {
     z-index: 1;
   }
 
@@ -34,13 +34,12 @@
     background-attachment: fixed;
     background-position: 95% 90%;
     opacity: 0.04;
-    filter: invert(15%) sepia(32%) saturate(10000%) hue-rotate(185deg)
-      brightness(96%) contrast(86%);
+    z-index: -1;
+    filter: invert(15%) sepia(32%) saturate(10000%) hue-rotate(185deg) brightness(96%) contrast(86%);
 
     :global([data-color-scheme="dark"]) & {
       opacity: 0.05;
-      filter: invert(48%) sepia(51%) saturate(585%) hue-rotate(161deg)
-        brightness(92%) contrast(86%);
+      filter: invert(48%) sepia(51%) saturate(585%) hue-rotate(161deg) brightness(92%) contrast(86%);
     }
 
     @media (min-width: $big-screen) {
